--- a/chapter_1.ipynb
+++ b/chapter_1.ipynb
@@ -222,7 +222,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data",
+   "display_name": "biosignal-image-processing",
    "language": "python",
    "name": "python3"
   },
@@ -236,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.20"
+   "version": "3.7.16"
   }
  },
  "nbformat": 4,
